--- a/apunte/extras/treaps/index.html
+++ b/apunte/extras/treaps/index.html
@@ -77,13 +77,13 @@ P(y) &= \sum_{x=1}^{y-1} \mathbf{1}<em>{y \text{ es ancestro de } x} + \sum</em>
 \Rightarrow \mathbb{E}(P(y)) &\leq H_{y-1} + H_{n-y+1} \leq 2H_n = O(\log n)
 \end{align*}
 $$</p><p>Donde $H_n$ corresponde al $n$-esimo número ármonico. Concluímos que la profundidad esperada es $O(\log n)$.</p><p>$\square$</p><p>Este resultado nos dice que en promedio, las operaciones en árboles binarios aleatorios nos tomarán tiempo en $O(\log n)$, pero no nos da seguridad respecto al peor caso. Podemos obtener un resultado aún más fuerte de que la altura de un árbol binario aleatorio es efectivamente $O(\log n)$, dejaremos la demostración aparte para los interesados.</p><details><summary>Demostración profundidad</summary><p>Vamos a nombrar $X_n$ la variable aleatoria resultante de tomar un árbol binario aleatorio y luego obtener su altura. Si fijamos la identidad de la raíz del árbol en $[1, n]$, el subárbol izquierdo será un árbol de $r-1$ valores y el derecho uno de $n-r$ valores. Esto nos permite escribir la esperanza condicional como:</p><p>$$
-\mathbb{E}(X_n \mid r) = \max(1+X_{r-1}, 1+X_{n-r}) = 1 + \max(X_{r-1}, X_{n-r})
+\mathbb{E}(X_n \mid r = i) = \mathbb{E}(\max(1+X_{r-1}, 1+X_{n-r})) = 1 + \mathbb{E}(\max(X_{r-1}, X_{n-r}))
 $$</p><p>Notar que la raíz de un árbol binario aleatorio es exactamente el valor que llega primero, así que la raíz será el valor $i \in [1, n]$ con probabilidad $\frac{1}{n}$. Con esto podemos expresar</p><p>$$
 \mathbb{E}(X_n) = \sum_{i=1}^{n} \mathbb{E}(X_n \mid r = i)\mathbb{P}(r = i)
-= 1 + \frac{1}{n} \sum_{i=1}^{n} \mathbb{E}(\max(X_{i-1}, X_{i-r}))
+= 1 + \frac{1}{n} \sum_{i=1}^{n} \mathbb{E}(\max(X_{i-1}, X_{n-i}))
 $$</p><p>Lamentablemente, esta expresión no es amena a ser trabajada para demostrar que la altura sea $O(\log n)$ (por lo menos, no de una forma que yo conozca). Vamos a usar un truco y definiremos $Y_n = 2^{X_n}$, la altura <em>exponencial</em> del árbol. Podemos repetir el análisis anterior y expresar:</p><p>$$
-\mathbb{E}(Y_n \mid r) = 2^{1+\max(X_{r-1}, X_{n-r})} = 2\max(2^{X_{r-1}}, 2^{X_{n-r}}) = 2\max(Y_{r-1}, Y_{n-r})
-$$</p><p>Podemos acotar esta última expresión como $\mathbb{E}(Y_n \mid r) = 2\max(Y_{r-1}, Y_{n-r}) \leq 2(Y_{r-1} + Y_{n-r})$. Y luego, acotar el valor esperado de $Y_n$ como:</p><p>$$
+\mathbb{E}(Y_n \mid r = i) = 2^{1+\max(X_{i-1}, X_{n-i})} = 2\max(2^{X_{i-1}}, 2^{X_{n-i}}) = 2\max(Y_{i-1}, Y_{n-i})
+$$</p><p>Podemos acotar esta última expresión como $\mathbb{E}(Y_n \mid r = i) = 2\max(Y_{i-1}, Y_{n-i}) \leq 2(Y_{i-1} + Y_{n-i})$. Y luego, acotar el valor esperado de $Y_n$ como:</p><p>$$
 \mathbb{E}(Y_n) = \sum_{i=1}^{n} \mathbb{E}(Y_n \mid r = i)\mathbb{P}(r = i)
 \leq \frac{2}{n} \sum_{i=1}^{n} \mathbb{E}(Y_{i-1} + Y_{n-i}) = \frac{4}{n} \sum_{i=0}^{n-1} \mathbb{E}(Y_i)
 $$</p><p>¿Que pasa si repetimos está cota para el valor $\mathbb{E}(Y_{n-1})$ ? Vemos que:</p><p>$$
