deploy: a6c92764242ab7a31f5f6fa56c059b54fecea66a

--- a/apunte/introduccion/compilacion_y_editores/index.html
+++ b/apunte/introduccion/compilacion_y_editores/index.html
@@ -62,7 +62,7 @@ entonces sigue el tutorial, en caso contrario tendrías que activarla desde tu B
 se sientes con la confianza para hacerlo, puedes usar los otros métodos para instalar <code>g++</code>.
 En WSL lo más común es instalar Ubuntu, de ahí puedes seguir las instrucciones de Linux que están más arriba.</li><li>MinGW (Minimalist GNU for Windows): Es una implementación de los
 compiladores de la GCC para Windows.
-Puedes descargarlo en <a href=https://sourceforge.net/projects/mingw/>Sourceforge</a>,
+Puedes descargarlo en <a href=https://github.com/skeeto/w64devkit>GitHub</a>,
 y la instalación es relativamente sencilla.</li><li>Cygwin: Es una colección de herramientas (entre ellas GCC) para proporcionar un
 entorno tipo UNIX en Windows. Puedes descargarlo <a href=https://www.cygwin.com/>en su sitio web</a>.</li></ol><h4 id=comprueba-la-instalación>Comprueba la instalación <a href=#comprueba-la-instalaci%c3%b3n class=anchor aria-hidden=true>#</a></h4><p>Independiente de tu plataforma, una vez instalado puedes comprobar la instalación corriendo el comando <code>g++ --version</code> en tu terminal, lo que debería imprimir algo parecido a esto:</p><pre tabindex=0><code>g++ (Ubuntu 9.3.0-17ubuntu1~20.04) 9.3.0
 Copyright (C) 2019 Free Software Foundation, Inc.
